--- a/Q1-5.md
+++ b/Q1-5.md
@@ -1,17 +1,47 @@
-﻿标签：Driphp
-# Q1-5
+﻿# Q1-5
+
+标签（空格分隔）： Driphp
 
 ---
 
-##NO.1 如何解决浮点数计算不精确问题？
+##NO.1 如何防范PHP中常见的SQL注入、CSRF、XSS攻击？
+###防止SQL注入
 
-### 问题描述
-在实际的项目中，往往会遇到浮点数计算的问题，但浮点数计算结果不精确，如何解决这个问题呢？如下面：
+1、使用PDO预处理的方式，也就是一个萝卜一个坑。
+>预处理。将输入的数值，绑定到参数，也就是放进坑里（一个萝卜一个坑，一个参数一个坑），这样输入的内容（外部的内容）就都落到坑里了，在每个坑里处理每个参数，这样就安全了，不会出现SQL注入。
 
-```php
-<?php
-var_dump(0.58*100*100==5800);//false
+2、使用htmlspecialchars()等函数进行转义。还可以对输入类型进行检测，类型转换。
+
+####防范CSRF：
+
+1、使用token进行验证。可以在 HTTP 请求中以参数的形式加入一个随机产生的 token，并在服务器端建立一个拦截器来验证这个 token，如果请求中没有 token 或者 token 内容不正确，则认为可能是 CSRF 攻击而拒绝该请求。（使用GET或POST方法加TOKEN）
+
+2、验证HTTP Referer字段。HTTP Referer字段，记录该HTTP请求的来源。如果来源是外部，那么就拒绝这个请求。（这个方法不安全，可以篡改HTTP Referer字段）
+
+3、一般框架，像ThinkPHP、laravel有表单令牌可以做防范。
+
+4、相关文章：https://www.ibm.com/developerw 
+####防范XSS:
+
+1、案例：听以前在阿里的同事分享：之前淘宝有一个意见反馈功能，有一天后台人员查看用户提交的意见，打开的某一条意见的瞬间，自动跳转到了另一个网站。但当时幸亏是阿里内网，对外网做了限制，没有造成危害。可见，XSS不可小觑。
+
+2、防范：最简单的办法，过滤输入。对用户的输入，可以使用htmlspecialchars()等函数进行过滤转义，当然，一些文件上传等，也可能会造成此攻击，要限制上传文件的类型，比如只能传图片等。
+
+##NO.2 如何解决浮点数计算不精确问题？
+###出乎意料的计算结果
 ```
+<?php
+
+$a = 0.1;
+
+$b = 0.7;
+
+var_dump(($a + $b) == 0.8);//bool(false)
+```
+###实际场景：
+
+某公司搞互联网金融。比如A用户借款6.67元，入库的时候我们是由元转化为分存储的。即应该存储6.67*100=667分，但是，出乎意料，入库的数据竟然是666分。最后一查，是浮点数计算出了问题。
+
 ### 解决办法
 NO.1 先把浮点数计算结果变为string类型，再转为int类型。
 ```php
@@ -32,90 +62,82 @@ bcsub(5,3);//2
 bcmul(5,3);//15
 bcdiv(100,2.2,2);//45.45
 ```
-##NO.2 如何获取文件扩展(后缀)名？
-### 问题描述
-获取文件后缀名，是一个很实用，又有很多种解法的问题。
-如：获取 /testweb/test.txt 的扩展名
-### 解决办法
-PHP中有一个函数：pathinfo()，可以获取文件的路径信息
-```php
-<?php
-$file='/testweb/test.txt';
-print_r(pathinfo($file));
+##NO.3如何更快的检查“How are you”中是否包含"How"？
+###如何更快的检查
+检查字符串中是否包含某个单词，有两个函数：strstr()、strpos()。
+但是，strpos()比strstr()消耗内存更低，效率更高，故使用strpos()更好一些。
+###strpos()的坑
+strpos()的返回值是找到单词的第1个字符出现的位置。如果找到了这个单词，但这个单词出现在了字符串的首位（即第0位）。如果直接使用if判断的话，0就是false。所以这里是个坑。
+###如何写
+①错误的写法
 ```
-上面的代码输出
-```php
-Array
-(
-    [dirname] => /testweb
-    [basename] => test.txt
-    [extension] => txt
-    [filename] => test
-)
+if(strpos("How are you?","How")){
+	return true;
+}else{
+	return false;
+}
 ```
-其中，extension就是文件的扩展名。
-获取文件的扩展名，需要下面代码：
-```php
-<?php
-$file='/testweb/test.txt';
-$path=pathinfo($file);
-$extension=$path['extension'];//txt
+②正确的写法
 ```
-或者，下面的代码
-```php
-<?php
-$file='/testweb/test.txt';
-$extension=pathinfo($file,PATHINFO_EXTENSION);//txt
+if(strpos("How are you?","How")!==false){
+	return true;
+}else{
+	return false;
+}
 ```
-##NO.3 如何将xml转换成数组
+##NO.4 Warning: Cannot modify header information - headers already sent by...
 ###问题描述
-有时候，我们需要将xml转变成数组，以方便我们操作。比如接入微信支付的时候，微信返回给我们的就是xml数据，我们需要拿到xml，将xml转成数组。
-###解决办法
-```php
-//禁止引用外部xml实体 
-libxml_disable_entity_loader(true); 
-//将xml载入对象中（转变成object）
-$xmlstring = simplexml_load_string($xml, 'SimpleXMLElement', LIBXML_NOCDATA); 
-//将object转变成json,再json_decode转变成数组
-$arr = json_decode(json_encode($xmlstring),true); 
+我们在写程序的时候，有时候会遇到这样的错误：
 ```
-##NO.4 如何获取客户端的ip地址与MAC地址
-###解决办法
- - 获取ip地址：可以通过变量$_SERVER['REMOTE_ADDR']获取。
- - 获取mac地址：不可能。
-
-###问题讨论：为什么能够获取ip地址，不能获取mac地址呢？
-
-客户端访问服务器，是通过http协议访问的。
-http协议的header信息中，包含了客户端的ip地址，也就是ip地址带给了服务器，那么服务器就可以获取客户端ip地址。
-![WechatIMG47.jpeg-78.4kB][1]
-
-对于MAC地址，http协议是不会发送给服务端的，那么，服务端就无法获取。
-
- 
-  [1]: http://static.zybuluo.com/ericliu001/a4xb3xao973plbx05pczr0wz/WechatIMG47.jpeg
-  
-##NO.5 如何在数组的任意位置插入新元素？
-###问题描述
-这个问题有好几种解决办法，主要是考验对数组函数的灵活掌握能力，也是基本功了~
-如：
-```php
-INPUT:$arr=['a','b','c','d','e'];//(要求在d的前面插入x)
-OUTPUT:$arr=['a','b','c','x','d','e'];
-
+Warning: Cannot modify header information - headers already sent by (output started at /Users/shuchao/Desktop/test.php:2) in /Users/shuchao/Desktop/test.php on line 3
 ```
-###解决办法
-```php
-1、使用array_splice()[推荐]
+比如，下面的程序：
+```
 <?php
-$arr = array( 'a', 'b', 'c', 'd', 'e' );
-$inserted = array( 'x' );
-array_splice( $arr, 3, 0, $inserted );
-print_r($arr);
-
-2、使用array_merge()、array_slice()进行组合。
-<?php
-$arr1=['a','b','c','d','e'];
-$arr=array_merge(array_slice($arr1,0,3),['x'],array_slice($arr1,3));
-print_r($arr);
+echo "I am just starting...\n";
+header("Content-Type:text/html;charset=utf-8");
+echo "I am ending...\n";
 ```
+运行结果如下：
+```
+I am just starting...
+
+Warning: Cannot modify header information - headers already sent by (output started at /Users/shuchao/Desktop/test.php:2) in /Users/shuchao/Desktop/test.php on line 3
+
+I am ending...
+```
+###问题原因
+PHP脚本主要用来产生网页的内容，与此同时，PHP首先会向服务器发送 http header。但是，发送http header之前，不能够有任何的输出。
+上面代码，由于在发送 http header之前有了输出,所以产生了warning。
+###如何解决
+1、删除header()之前的输出语句：
+```
+echo "I am just starting...\n";
+```
+2、开启php的output_buffer
+###常见的可能产生输出的地方：
+```
+1、print\echo\printf\print_r\var_dump等可以输出内容的函数或结构体
+2、  <?php前面的空格   
+3、?>  后面的空格  
+4、UTF-8 BOM（如果保存为BOM，会产生BOM头，如<FEFF><?php ?>）
+5、error_reporting报出的错误，也会产生输出
+```
+##NO.5 如何加密密码，在数据库被拖库的时候，保证密码不泄漏？
+###使用hash函数
+
+  必须使用单向hash加密，理论上不可被反向破解。但因为彩虹表的出现，一些简单的hash函数，可以被分分秒破解（如md5函数、sha函数等）。
+###加盐
+上面讲到，hash函数很容易被反向破解。那么，我们可以加点“盐”。
+
+   md5("123456","salt"),用户输入的密码和salt混合在一起，生成最终的密文，这就不容易被破解了。
+
+   但是，如果黑客知道了我们的salt，那我们加的salt就没用了。最好的解决办法，是使用随机的salt来进行加盐。
+###慢哈希函数
+所谓慢哈希函数，就是可以控制加密、解密的成本。比如，加解密一个函数，需要10ms，我们可以手动延长到100ms。这样就大大增加了破解的成本，10ms还是100ms对用户来说感受差不多，但大大增加了破解的成本。
+
+破解一个简单的hash密码可能需要10s,但破解一个慢哈希加密的密码可能需要100年。如bcrypt()就是一个慢哈希函数，同时支持加盐。
+###比较好的加密方案
+1、使用公认的，比较安全的PHP加解密库。比如phpass就是一个很流行的php加解密库。
+2、使用password_hash()\password_verify()来加解密。这是PHP5.5新增的函数，是一个慢哈希函数，具有更高的安全性。但是，兼容性不太好，只能用在php中。不能用在如java\node中进行加解密。
+
