--- a/Q11-15.md
+++ b/Q11-15.md
@@ -4,294 +4,145 @@
 
 ---
 
-##NO.11 什么是PHP Traits？PHP Traits有什么用？
-###问题描述
-Traits是PHP的一个新特性，了解的人也比较少。我们一起来探索一下吧？
-###问题解决
-####Traits的目的
-
-> Traits 是一种为单继承语言而准备的代码复用机制。
-####Traits与interface、abstract class有什么区别？
->Interface、abstract class等，都是在**垂直方向**上扩展类的功能。
-Traits是在**水平方向**上扩展类的功能。
-
-通俗点说：Traits就是有意义的代码块，你可以在类中随时引入这个代码块，从而在水平方向上，扩展你类的功能。
-
-##NO.12正则表达式的使用
-###问题描述
-对于字符串“python php ruby javascript jsonp perhapsphpisoutdated”。
-使用正则获取 所有带 "p" 但是不能包含 "ph" 的单词？
-###问题解决
-```php
-\b((?!ph|\s).)*((p[^h\s]((?!ph|\s).)*)|p)\b/g
+##NO.11发一个随机红包，100块钱给10个人。每个人最多12块钱，最少6块钱。怎么分？
 ```
-参考资料：[segment][1]
-##NO.13 什么是PHP hook？
-钩子是一种事件驱动的消息处理机制。
+<?php
 
-一个事件，可以看作一段完成某个目的的程序。比如查询一次数据库，或者访问某个网址等等。
+$total_money=100;
 
-事件驱动分为两个阶段：
+//定义10个人，每人初始拥有0元钱
+$pepole=['p1'=>'','p2'=>'','p3'=>'','p4'=>'','p5'=>'','p6'=>'','p7'=>'','p8'=>'','p9'=>'','p10'=>''];
 
-第一个阶段是注册事件，目的是给未来可能发生的“事件”起一个名字，简单的实现方法是用单例模式产生一个持久的对象或者注册一个全局变量，然后将事件名称，以及该事件对应的类与方法插入全局变量即可。也就是挂载一个钩子
+//每个人分配6元钱
 
-第二个阶段是触发事件，本质上就是在事件的全局变量中查询要触发的事件名称，然后找到注册好的类与方法，实例化并运行。这样子就可以摆脱传统方式中程序必须按顺序的规则，进一步实现解除耦合的目的。
+foreach ($pepole as $key => $value) {
 
-http://baijunyao.com/article/85
-php中钩子(hook)的应用示例demo(讲的很形象)
+    $people[$key]=6;
 
-##NO.14 什么是单例模式？单例模式的应用场景是什么？
-###什么是单例模式
-单例，就是只有一个对象实例。
-###为什么要用单例模式？
-比如，数据库的连接,只需要实例化1个对象就可以了。
-如果实例化多个数据库连接对象，会造成以下问题：
+}
 
- 1. 资源浪费
- 2. 可能造成数据不一致
+$total_money=$total_money-count($people)*6;
 
-###如何保证一个类不会有多个对象呢？
-我们一步步的推导：
+//每个人随机分钱，每次分1块
 
-Q:为什么会有多个对象呢？
-A:因为在类的外部可以随意new一个对象。或者，clone一个对象。
+while($total_money>0){
 
-Q:如何保证只有一个对象呢？
-A:不允许在类的外部new、clone对象。
+    $rand=mt_rand(1,10);
 
-Q:如何不允许在类的外部new、clone对象呢？
-**A:将这个类的构造方法设置成private,就可以防止在外部new一个对象。**
-在类的内部实现__clone()这个方法。
+    if($people["p{$rand}"]<12){
 
-###如何才能生成这个唯一的对象呢？
-在类的内部，提供一个public方法。
-外部通过调用这个public方法，来获取类的实例对象。
+        $people["p{$rand}"]+=1;
 
-##代码演示
+        $total_money-=1;
+
+    }
+
+}
+print_r($people);
+```
+##NO.12 在PHP的开发环境下，如何保证从头到尾都是UTF-8格式
+####1、Mysql字符集设置：
+
+- 设置Mysql数据库、数据表、字段的字符集编码都为utf8格式。
+- 设置数据库字符集编码
+```
+ALTER DATABASE db_name DEFAULT CHARACTER SET utf8
+```
+- 设置数据表字符集编码
+```
+ALTER TABLE tbl_name DEFAULT CHARACTER SET utf8
+```
+- 设置字段字符集编码
+```
+ALTER TABLE tbl_name CHANGE column_name column_name CHARACTER SET utf8
+```
+附录
+```
+查看数据库字符集：SHOW CREATE DATABASE db_name;   
+查看数据表字符集：SHOW CREATE TABLE tbl_name;   
+查看字段编码：SHOW FULL COLUMNS FROM tbl_name; 
+```
+####2、连接数据库
+使用PDO连接
+```
+$dbh = new PDO('mysql:charset=utf8');
+```
+
+使用mysqli连接
+```
+$mysqli->set_charset('utf8');  
+```
+使用mysql_connect连接.
+```
+SET NAMES 'utf8'
+```
+####3、php.ini中设置 
+
+```
+default_charset=utf-8
+```
+决定的浏览器的默认编码格式，与header('Content-Type: text/html; charset=utf-8');效果一样
+##NO.13 如何获取文件扩展(后缀)名？
+### 问题描述
+获取文件后缀名，是一个很实用，又有很多种解法的问题。
+如：获取 /testweb/test.txt 的扩展名
+### 解决办法
+PHP中有一个函数：pathinfo()，可以获取文件的路径信息
 ```php
 <?php
-/**
- * 单例类
- */
-class Singleton {
- 
-    /**
-     * 静态成品变量 保存全局实例
-     */
-    private static  $_instance = NULL;
- 
-    /**
-     * 私有化默认构造方法，保证外界无法直接实例化
-     */
-    private function __construct() {
-    }
- 
-    /**
-     * 静态工厂方法，返还此类的唯一实例
-     */
-    public static function getInstance() {
-        if (is_null(self::$_instance)) {
-            self::$_instance = new self();
-        }
- 
-        return self::$_instance;
-    }
- 
-    /**
-     * 防止用户克隆实例
-     */
-    public function __clone(){
-        die('Clone is not allowed.' . E_USER_ERROR);
-    }
- 
-    /**
-     * 测试用方法
-     */
-    public function test() {
-        echo 'Singleton Test!';
-    }
- 
-}
- 
-/**
- * 客户端
- */
-class Client {
- 
-     /**
-     * Main program.
-     */
-    public static function main() {
-        $instance = Singleton::getInstance();
-        $instance->test();
-    }
-}
- 
-Client::main();
-?>
+$file='/testweb/test.txt';
+print_r(pathinfo($file));
 ```
-##NO.15观察者模式
-###针对具体实现编程，会导致我们以后在增加或删除布告板时必须修改程序。
-
-###观察者模式定义
-在对象之间定义一对多的依赖，这样一来，当一个对象改变状态，依赖他的对象都会收到通知，并自动更新。
-###为什么使用观察者模式
-针对具体场景的编程，耦合性比较高。
-使用观察者模式，观察者，与被观察者之间，不用关心彼此之间内部如何实现，双方只需要定义好消息通知的接口就可以了。这样实现了低耦合。
-
-###简单代码实现
+上面的代码输出
+```php
+Array
+(
+    [dirname] => /testweb
+    [basename] => test.txt
+    [extension] => txt
+    [filename] => test
+)
+```
+其中，extension就是文件的扩展名。
+获取文件的扩展名，需要下面代码：
 ```php
 <?php
- 
-/**
- * @package design pattern
- */
- 
-/**
- * 抽象主题角色
- */
-interface Subject {
- 
-    /**
-     * 增加一个新的观察者对象
-     * @param Observer $observer
-     */
-    public function attach(Observer $observer);
- 
-    /**
-     * 删除一个已注册过的观察者对象
-     * @param Observer $observer
-     */
-    public function detach(Observer $observer);
- 
-    /**
-     * 通知所有注册过的观察者对象
-     */
-    public function notifyObservers();
-}
- 
-/**
- * 具体主题角色
- */
-class ConcreteSubject implements Subject {
- 
-    private $_observers;
- 
-    public function __construct() {
-        $this->_observers = array();
-    }
- 
-    /**
-     * 增加一个新的观察者对象
-     * @param Observer $observer
-     */
-    public function attach(Observer $observer) {
-        return array_push($this->_observers, $observer);
-    }
- 
-    /**
-     * 删除一个已注册过的观察者对象
-     * @param Observer $observer
-     */
-    public function detach(Observer $observer) {
-        $index = array_search($observer, $this->_observers);
-        if ($index === FALSE || ! array_key_exists($index, $this->_observers)) {
-            return FALSE;
-        }
- 
-        unset($this->_observers[$index]);
-        return TRUE;
-    }
- 
-    /**
-     * 通知所有注册过的观察者对象
-     */
-    public function notifyObservers() {
-        if (!is_array($this->_observers)) {
-            return FALSE;
-        }
- 
-        foreach ($this->_observers as $observer) {
-            $observer->update();
-        }
- 
-        return TRUE;
-    }
- 
-}
- 
-/**
- * 抽象观察者角色
- */
-interface Observer {
- 
-    /**
-     * 更新方法
-     */
-    public function update();
-}
- 
-class ConcreteObserver implements Observer {
- 
-    /**
-     * 观察者的名称
-     * @var <type>
-     */
-    private $_name;
- 
-    public function __construct($name) {
-        $this->_name = $name;
-    }
- 
-    /**
-     * 更新方法
-     */
-    public function update() {
-        echo 'Observer', $this->_name, ' has notified.<br />';
-    }
- 
-}
- 
-/**
- * 客户端
- */
-class Client {
- 
-    /**
-     * Main program.
-     */
-    public static function main() {
-        $subject = new ConcreteSubject();
- 
-        /* 添加第一个观察者 */
-        $observer1 = new ConcreteObserver('Martin');
-        $subject->attach($observer1);
- 
-        echo '<br /> The First notify:<br />';
-        $subject->notifyObservers();
- 
-        /* 添加第二个观察者 */
-        $observer2 = new ConcreteObserver('phppan');
-        $subject->attach($observer2);
- 
-        echo '<br /> The Second notify:<br />';
-        $subject->notifyObservers();
- 
-        /* 删除第一个观察者 */
-        $subject->detach($observer1);
- 
-        echo '<br /> The Third notify:<br />';
-        $subject->notifyObservers();
-    }
- 
-}
- 
-Client::main();
-?>
+$file='/testweb/test.txt';
+$path=pathinfo($file);
+$extension=$path['extension'];//txt
 ```
+或者，下面的代码
+```php
+<?php
+$file='/testweb/test.txt';
+$extension=pathinfo($file,PATHINFO_EXTENSION);//txt
+```
+##NO.14 如何将xml转换成数组
+###问题描述
+有时候，我们需要将xml转变成数组，以方便我们操作。比如接入微信支付的时候，微信返回给我们的就是xml数据，我们需要拿到xml，将xml转成数组。
+###解决办法
+```php
+//禁止引用外部xml实体 
+libxml_disable_entity_loader(true); 
+//将xml载入对象中（转变成object）
+$xmlstring = simplexml_load_string($xml, 'SimpleXMLElement', LIBXML_NOCDATA); 
+//将object转变成json,再json_decode转变成数组
+$arr = json_decode(json_encode($xmlstring),true); 
+```
+##NO.15 如何获取客户端的ip地址与MAC地址
+###解决办法
+ - 获取ip地址：可以通过变量$_SERVER['REMOTE_ADDR']获取。
+ - 获取mac地址：不可能。
+
+###问题讨论：为什么能够获取ip地址，不能获取mac地址呢？
+
+客户端访问服务器，是通过http协议访问的。
+http协议的header信息中，包含了客户端的ip地址，也就是ip地址带给了服务器，那么服务器就可以获取客户端ip地址。
+![WechatIMG47.jpeg-78.4kB][1]
+
+对于MAC地址，http协议是不会发送给服务端的，那么，服务端就无法获取。
+
+ 
+  [1]: http://static.zybuluo.com/ericliu001/a4xb3xao973plbx05pczr0wz/WechatIMG47.jpeg
 
 
-
->大罗分享：观察者模式很常用啊，比如说我现在需要你发生某个case的时候需要通知我。首先我们要约定一个interface,这个接口由我来实现，而你不用关心这个接口的实现。我把这个interface告诉你，你在发生这个case的时候执行这个interface的fuction就好了。我就是观察者，你就是被观察者。 安卓底层实现了很多这种观察者模式，例如对contentProvider(数据提供者)的观察，他会给出一个interface.并给出registerObeser方法，参数必须是这个interface类型的。三方app开发人员，只需要实现这个interface.然后registe就好了。这里涉及面相接口编程的思想。
-
-  [1]: https://segmentfault.com/q/1010000006155587?sort=created
