--- a/Q16-20.md
+++ b/Q16-20.md
@@ -4,214 +4,142 @@
 
 ---
 
-##NO.16 如何将文件分块传递？
-###server端(发送端)
-```php
-<?php
-$fn = 'http://img06.tooopen.com/images/20160916/tooopen_sy_178957232691.jpg';//随便找的一个图片
-$size = 512;
- 
-$mch = curl_multi_init ();
-$conn = array ();
-$url = 'http://localhost/curl_server.php';
- 
-$fp = fopen($fn, 'rb');
-$i = 0;
-while(! feof($fp)) {
-  $post = array(
-    'id' => $i,
-    'name' => basename($fn),
-    'offset' => ftell($fp),
-    'data' => base64_encode(fread($fp, $size)),
-  );
-  $conn[$i] = curl_init ( $url );
-  curl_setopt( $conn[$i], CURLOPT_POST, true );
-  curl_setopt( $conn[$i], CURLOPT_POSTFIELDS, $post );
-  curl_setopt ( $conn[$i], CURLOPT_RETURNTRANSFER, true );
-  curl_multi_add_handle ( $mch, $conn[$i] );
-  $i++;
-}
- 
-$running = NULL;
-do {
-    curl_multi_exec ( $mch, $running );
-} while ( $running > 0 );
- 
-foreach ( $conn as $i => $v ) {
-  print_r(curl_multi_getcontent($v));
-  curl_close ( $conn[$i] );
-}
- 
-curl_multi_close ( $mch );
-```
-###client端(接收端)
-```php
-<?php
-print_r($_POST);//应答
-$type = file_exists($_POST['name']) ? 'rb+' : 'wb';
-$fp = fopen($_POST['name'], $type);
-fseek($fp, $_POST['offset']);
-fwrite($fp, base64_decode($_POST['data']));
-fclose($fp);
-```
-##NO.17变态跳台阶问题
+##NO.16 如何在数组的任意位置插入新元素？
 ###问题描述
-一只青蛙一次可以跳上1级台阶，也可以跳上2级……它也可以跳上n级。求该青蛙跳上一个n级的台阶总共有多少种跳法？
-###分析推导
+这个问题有好几种解决办法，主要是考验对数组函数的灵活掌握能力，也是基本功了~
+如：
 ```php
-关于本题，前提是n个台阶会有一次n阶的跳法。分析如下:
-f(1) = 1
-f(2) = f(2-1) + f(2-2)         //f(2-2) 表示2阶一次跳2阶的次数。
-f(3) = f(3-1) + f(3-2) + f(3-3) 
-...
-f(n) = f(n-1) + f(n-2) + f(n-3) + ... + f(n-(n-1)) + f(n-n) 
- 
-说明： 
-1）这里的f(n) 代表的是n个台阶有一次1,2,...n阶的 跳法数。
-2）n = 1时，只有1种跳法，f(1) = 1
-3) n = 2时，会有两个跳得方式，一次1阶或者2阶，这回归到了问题（1） ，f(2) = f(2-1) + f(2-2) 
-4) n = 3时，会有三种跳得方式，1阶、2阶、3阶，
-    那么就是第一次跳出1阶后面剩下：f(3-1);第一次跳出2阶，剩下f(3-2)；第一次3阶，那么剩下f(3-3)
-    因此结论是f(3) = f(3-1)+f(3-2)+f(3-3)
-5) n = n时，会有n中跳的方式，1阶、2阶...n阶，得出结论：
-    f(n) = f(n-1)+f(n-2)+...+f(n-(n-1)) + f(n-n) => f(0) + f(1) + f(2) + f(3) + ... + f(n-1)
-    
-6) 由以上已经是一种结论，但是为了简单，我们可以继续简化：
-    f(n-1) = f(0) + f(1)+f(2)+f(3) + ... + f((n-1)-1) = f(0) + f(1) + f(2) + f(3) + ... + f(n-2)
-    
-    f(n) = f(0) + f(1) + f(2) + f(3) + ... + f(n-2) + f(n-1) = f(n-1) + f(n-1)
-    
-    可以得出：
-    f(n) = 2*f(n-1)
-    
-7) 得出最终结论,在n阶台阶，一次有1、2、...n阶的跳的方式时，总得跳法为：
-              | 1       ,(n=0 ) 
-f(n) =        | 1       ,(n=1 )
-              | 2*f(n-1),(n>=2)
+INPUT:$arr=['a','b','c','d','e'];//(要求在d的前面插入x)
+OUTPUT:$arr=['a','b','c','x','d','e'];
+
 ```
-###代码实现
+###解决办法
+```php
+1、使用array_splice()[推荐]
+<?php
+$arr = array( 'a', 'b', 'c', 'd', 'e' );
+$inserted = array( 'x' );
+array_splice( $arr, 3, 0, $inserted );
+print_r($arr);
+
+2、使用array_merge()、array_slice()进行组合。
+<?php
+$arr1=['a','b','c','d','e'];
+$arr=array_merge(array_slice($arr1,0,3),['x'],array_slice($arr1,3));
+print_r($arr);
+```
+##NO.17 如何获取今日、昨日、上周、本月的起始时间戳和结束时间戳？
+###问题描述
+获取特定时间段的时间戳，开发中经常用到，很实用。
+###解决办法
+####NO.1使用mktime()
 ```php
 <?php
-function jumpFloor($target) {
-    if ($target <= 0) {
-        return -1;
-    } else if ($target == 1) {
-        return 1;
-    } else {
-        return 2 * jumpFloor($target - 1);
+//php获取今日开始时间戳和结束时间戳
+$beginToday=mktime(0,0,0,date('m'),date('d'),date('Y'));
+$endToday=mktime(0,0,0,date('m'),date('d')+1,date('Y'))-1;
+
+//php获取昨日起始时间戳和结束时间戳
+$beginYesterday=mktime(0,0,0,date('m'),date('d')-1,date('Y'));
+$endYesterday=mktime(0,0,0,date('m'),date('d'),date('Y'))-1;
+
+//php获取上周起始时间戳和结束时间戳
+$beginLastweek=mktime(0,0,0,date('m'),date('d')-date('w')+1-7,date('Y'));
+$endLastweek=mktime(23,59,59,date('m'),date('d')-date('w')+7-7,date('Y'));
+
+//php获取本月起始时间戳和结束时间戳
+$beginThismonth=mktime(0,0,0,date('m'),1,date('Y'));
+$endThismonth=mktime(23,59,59,date('m'),date('t'),date('Y'));
+
+```
+####NO.2使用Carbon
+
+> Carbon是第三方的很好用的一个时间类库。很灵活、好用。
+
+比如，获得一天的开始、结束时间戳：
+```php
+<?php
+$startDay = Carbon::createFromTimestamp(time())->startOfDay();
+$endDay = Carbon::createFromTimestamp(time())->endOfDay();
+```
+[Carbon官网][1]
+##NO.18 青蛙跳台阶问题
+###问题描述
+一只青蛙一次可以跳上1级台阶，也可以跳上2级台阶。求该青蛙跳上一个n级的台阶总共有多少种跳法？
+###解决办法
+对于第n个台阶来说，只能从n-1或者n-2的台阶跳上来，所以
+F(n) = F(n-1) + F(n-2)（也就是斐波拉契数序列）
+```php
+<?php
+function jumpFloor($number){
+        if($number<=0) return 0;
+        if($number==1) return 1;
+        if($number==2) return 2;
+        return jumpFloor($number-1)+jumpFloor($number-2);
+}
+
+```
+##NO.19 Mysql如何按指定字段自定义排序？
+###问题描述：
+一张表中有一个字段status：值为1、3、5、7
+升序排列:order by status ASC
+降序排列:order by status DESC
+现在我想按照自定义规则:3、5、1、7 进行排序。如何做到呢？
+###解决办法
+使用PHP的ORDER BY FIELD 按字段排序语法。
+```mysql
+order by FIELD(`status`,3,5,1,7)
+```
+
+> 建议：逻辑处理最好还是在php、java等语言端做，mysql专注于存储。这样效率会更高一些，特别是对于数据量大的场景。
+
+##NO.20 猴王问题
+###问题描述
+有一群猴子排成一圈，按1,2,...,n依次编号。
+然后从第1只开始数，数到第m只,把它踢出圈，从它后面再开始数， 再数到第m只，再把它踢出去...，如此不停的进行下去，直到最后只剩下一只猴子为止，那只猴子就叫做大王。
+
+要求：编程模拟此过程，输入m、n, 输出最后那个大王的编号。
+
+###解决办法
+####NO.1使用约瑟夫环递推公式（推荐）
+```php
+<?php
+function yuesefu($n,$m){
+    $next = 0;
+    for($i=2;$i<=$n;$i++){
+        $next = ($next+$m)%$i;
+        echo $next;
     }
-}
-```
-##NO.18 psr-4中autoloader的原理是什么？
-
-###问题描述
-####为什么使用类的自动加载？
-
-随着项目的变大，一个文件中使用的类越来越多，可能需要加载几十个类文件。如何对这些引入的类进行管理呢？
-最开始使用 __autoload()。但是如果一个项目依赖多个框架，多个框架都有__autoload()，就会报函数重复定义的错误
-###问题解决
-如何解决呢？
-使用spl_autoload_register()去注册一个自动加载函数。
-http://blog.csdn.net/panpan639944806/article/details/23192267
-
- PSR-4规范能够满足面向package的自动加载，它规范了如何从文件路径自动加载类，同时规范了自动加载文件的位置。
-
- 具体：https://my.oschina.net/1pei/blog/485099
-##NO.19 适配器模式
-###为什么使用适配器模式
-可以将截然不同的函数接口封装成统一的API。
-###适配器模式的应用场景
-1、系统想要使用现有的类，而现有的类不符合系统接口规则，要对这个接口进行适配；
-2、两个类做的事情相同或相似，形成对外的统一接口，方便以后其他类的引入，适配。
-####连接数据库的适配器。
-连接数据库可以使用PDO、Mysql、Mysqli等，每种连接方式都不同。
-如何对外形成一个统一的调用接口呢？
-####Cache的适配器。
-连接Cache，可以有Redis、Memcached等，每种连接方式也不同。
-如何对外形成一个统一的调用接口呢？
-###适配器模式的设计思路
-
- - 定义适配接口
-```php
-<?php
-interface Database{
-    public function connect();
-    public function query();
-    public function close();
-}
-```
- - 每个类实现这个接口
- 
-Mysql连接的实现方法
-```php
-class Mysql implements Database{
-    //实现方法
-}
-```
-Mysqli连接的实现方法
-```php
-class Mysqli implements Database{
-   //实现方法
-}
-```
-PDO连接的实现方法
-```php
-class PDO implements Database{
-   //实现方法
-}
-```
- - 应用中的实现
-```php
-<?php
-$conn=new Mysql();//使用Mysql连接
-$conn=new Mysqli();//使用Mysqli连接
-$conn=new PDO();//使用PDO连接
-```
-##NO.20 二分法的应用
-###问题描述
-用二分法(也叫折半查找法)查找数组中的某元素。
-###问题解决
-```php
-<?php
-/**
- *$arr 要查找的数组
- *$value 要查找的数组中的值
- *查找到返回true 查找失败返回false
- */
-function binary_search($arr,$value){
-	//将数组排序成有序数组
-	sort($arr);
-	$count=count($arr);
-	if($count<=0) return false;
-	$mid_key=intval($count/2);
-	$mid_value=$arr[$mid_key];
-	//如果中间值就是要查找的值，返回true
-	if($mid_value==$value){
-		return true;
-	}
-	//如果中间值大于要查找的值，在数组的左半边进行查找
-	if($mid_value>$value){
-		$arr=array_slice($arr, 0,$mid_key);
-		return binary_search($arr,$value);
-	}
-	//如果中间值小于要查找的值，在数组的右半边进行查找
-	if($mid_value<$value){
-		$arr=array_slice($arr, $mid_key+1);
-		return binary_search($arr,$value);
-	}
-	return false;
+    return $next+1;
 }
 
-//测试使用
-$arr=[1,6,2,3,4];
-
-$value=6;
-$res_right=binary_search($arr,$value);
-var_dump($res_right);//返回true
-
-$value=5;
-$res_wrong=binary_search($arr,$value);
-var_dump($res_wrong);//返回false
+echo yuesefu(5,2);
 ```
+####NO.2 使用数组
+```php
+ function getKingMonkey($n,$m){ 
+        $monkey=range(1,$n); //构建猴子数组 
+        $i=0; 
+        //遍历猴子数组 
+        while( list($k,$value)=each($monkey)){ 
+            if(count($monkey)==1){ 
+                echo $value. "是猴王"; 
+                exit(); 
+        } 
+         
+        if(++$i==$m){ 
+           echo $monkey[$k].'踢出去'.'<br/>'; 
+           unset($monkey[$k]);  //把变量 清除 
+           $i=0;                  //指针归位 
+        } 
+        //如果已经数到最后的话  则继续进行下一轮的循环 
+        if(!current($monkey)){ 
+            reset($monkey); 
+        } 
+     } 
+   }
+```
+
+
 
 
