--- a/Q21-25.md
+++ b/Q21-25.md
@@ -4,201 +4,161 @@
 
 ---
 
-##NO.21 Overloading与Overriding的区别？
-Overloading是方法重载：方法名称一样，参数不同。
-```php
-class Addition {
-  function compute($first, $second) {
-    return $first+$second;
-  }
+##NO.21 使用CURL抓取百度数据，并做简单的处理
+###问题描述：
+简单描述CURL原理。实现抓取百度首页的代码，并且替换抓取内容中的"baidu"为"drip"。
+###解决办法
+####curl原理
 
-  function compute($first, $second, $third) {
-    return $first+$second+$third;
-  }
-}
-```
-Overriding是方法重写：
-```php
-class Addition {
-  function compute($first, $second, $third = 0) {
-    return $first+$second+$third;
-  }
-}
+> 客户端———CURL————服务器
 
-class Substraction extends Addition {
-  function compute($first, $second, $third = 0) {
-    return $first-$second-$third;
-  }
-}
-```
-##NO.22 php中的yield是什么？有什么用？
-###yield是什么
-含有yield关键字的函数被调用时候和普通函数不同，他不执行函数代码，而是返回一个generator对象，这个对象可迭代。
-###应用场景
-###内存超过100MB的解决办法
-标准的 range() 函数需要在内存中生成一个数组，然后返回该数组, 结果就是会产生多个很大的数组。 
-比如，调用 range(0, 1000000) 将导致内存占用超过 100 MB。
+互联网上有各种各样的资源，比如图片、网页、脚本、数据等其他资源。
+我们作为客户端（比如浏览器），要想获得服务器的资源，如何获得呢？
+一般来说，有以下几个流程。 
 
+1：客户端通过CURL告知服务器自己想要什么资源（顾客通过服务员告诉饭店要吃什么菜）。 
+2：服务器通过CURL了解到客户端要请求的资源，并准备好资源（顾客通过服务员知道顾客点的菜，并做好菜）。 
+3：服务器将准备好的资源通过CURL传递给客户端（饭店通过服务员上菜）可以知道，CURL承担了一个媒介的作用。即是客户端和服务器沟通的桥梁。
 
-----------
-
-
-做为一种替代方法, 我们可以实现一个 xrange() 生成器, 只需要足够的内存来创建 Iterator 对象并在内部跟踪生成器的当前状态，这样只需要不到1K字节的内存。
+总结为：CURL是客户端向服务器请求资源的工具。
+####curl抓取百度内容，并将'baidu'替换为'drip'
 ```php
 <?php
-function xrange($start, $limit, $step = 1) {
-        if ($step <= 0) {
-            throw new LogicException('Step must be +ve');
-        }
-        for ($i = $start; $i <= $limit; $i += $step) {
-            yield $i;
-        }
-}
-
-/* 
- * 注意下面range()和xrange()输出的结果是一样的。
- */
-
-foreach (range(1, 9, 2) as $number) {
-    echo "$number ";
-}
-echo "\n";
-
-foreach (xrange(1, 9, 2) as $number) {
-    echo "$number ";
-}
+  $curl=curl_init();//可以先初始化，不传参数
+  curl_setopt($curl,CURLOPT_URL,"http://www.baidu.com");//对百度爬取
+  curl_setopt($curl,CURLOPT_RETURNTRANSFER,true);//设置返回来的内容不输出，以流的形式返回
+  $content=curl_exec($curl);//执行curl
+  curl_close($curl);//关闭curl
+  echo str_replace("baidu","drip",$content);//在$content中搜索baidu,替换为hello
 ?>
 ```
-###其他应用场景
-[在PHP中使用协程实现多任务调度][1]
+  [1]: http://carbon.nesbot.com/docs/
+##NO.22 什么是PHP Traits？PHP Traits有什么用？
+###问题描述
+Traits是PHP的一个新特性，了解的人也比较少。我们一起来探索一下吧？
+###问题解决
+####Traits的目的
 
-##参考文章
-[yield是什么-知乎][2]
-[生成器语法-PHP手册][3]
-[在PHP中使用协程实现多任务调度-鸟哥][1]
+> Traits 是一种为单继承语言而准备的代码复用机制。
+####Traits与interface、abstract class有什么区别？
+>Interface、abstract class等，都是在**垂直方向**上扩展类的功能。
+Traits是在**水平方向**上扩展类的功能。
 
-  [1]: http://www.laruence.com/2015/05/28/3038.html
-  [2]: https://www.zhihu.com/question/26966414
-  [3]: http://php.net/manual/zh/language.generators.syntax.php
-  
-  
-##NO.23 使用ssh免密登陆服务器的原理是什么？
-##名词解释
-###对称加密：
-数据的加密与解密，使用的是同样的密钥。（不存在公钥、私钥的概念）
-###非对称加密
-公钥与私钥是一对。
-使用公钥加密的数据，要使用私钥解密。
-使用私钥加密的数据，要使用公钥解密。
-###RSA加密算法
-RSA算法是非对称加密的一种。SSH使用的RSA进行的登录验证。
-##早期的数据传输
-早期计算机之间的连接，都是使用明文传输的方式，比如ftp协议、telnet协议等等。
-这种方式很不安全，很容易被截获，从而获取用户的登录名和密码。
-##SSH来了
-为了解决安全问题，SSH横空出世。SSH传输过程中，数据全程加密，并使用两种验证方式保证传输的安全。
+通俗点说：Traits就是有意义的代码块，你可以在类中随时引入这个代码块，从而在水平方向上，扩展你类的功能。
 
-###1、基于密码的安全验证。
-
-当用户要登陆一台远程主机，以登陆srb.w3cs.site为例。
-
-用户输入 
+##NO.23正则表达式的使用
+###问题描述
+对于字符串“python php ruby javascript jsonp perhapsphpisoutdated”。
+使用正则获取 所有带 "p" 但是不能包含 "ph" 的单词？
+###问题解决
+```php
+\b((?!ph|\s).)*((p[^h\s]((?!ph|\s).)*)|p)\b/g
 ```
-ssh root@srb.w3cs.site
-```
-但是，如何保证用户登陆的就是 srb.w3cs.site主机呢，如何保证不是其他主机伪装的呢？
+参考资料：[segment][1]
+##NO.24 什么是PHP hook？
+钩子是一种事件驱动的消息处理机制。
 
-当用户第一次登陆的时候，用户会收到这样的提示：
-```
-$ ssh root@srb.w3cs.site
+一个事件，可以看作一段完成某个目的的程序。比如查询一次数据库，或者访问某个网址等等。
 
-The authenticity of host ‘host (12.18.429.21)’ can’t be established.
+事件驱动分为两个阶段：
 
-RSA key fingerprint is 98:2e:d7:e0:de:9f:ac:67:28:c2:42:2d:37:16:58:4d.
+第一个阶段是注册事件，目的是给未来可能发生的“事件”起一个名字，简单的实现方法是用单例模式产生一个持久的对象或者注册一个全局变量，然后将事件名称，以及该事件对应的类与方法插入全局变量即可。也就是挂载一个钩子
 
-Are you sure you want to continue connecting (yes/no)?
-```
-服务器将自己的公钥指纹发送给想连接的用户主机，告诉用户主机
-> 这是我的指纹，你看看对吗？
-对的话你就输入yes连接,不对的话你就输入no放弃连接。
+第二个阶段是触发事件，本质上就是在事件的全局变量中查询要触发的事件名称，然后找到注册好的类与方法，实例化并运行。这样子就可以摆脱传统方式中程序必须按顺序的规则，进一步实现解除耦合的目的。
 
-这样就保证了数据连接的安全性。
-如果点了yes,这台主机的公钥就被放在了用户的.ssh文件夹下的known_hosts文件中，下次就不用重复确认了。
+http://baijunyao.com/article/85
+php中钩子(hook)的应用示例demo(讲的很形象)
 
-上面，主机接受了srb.w3cs.site的公钥。
+##NO.25 什么是单例模式？单例模式的应用场景是什么？
+###什么是单例模式
+单例，就是只有一个对象实例。
+###为什么要用单例模式？
+比如，数据库的连接,只需要实例化1个对象就可以了。
+如果实例化多个数据库连接对象，会造成以下问题：
 
-接下来：
+ 1. 资源浪费
+ 2. 可能造成数据不一致
 
- - 用户输入登陆密码，利用接受的服务器公钥来加密密码，将加密的密码发送给服务器，
- - 服务器用自己的私钥，解密密码。如果密码正确，允许登陆。否则，拒绝登陆。
+###如何保证一个类不会有多个对象呢？
+我们一步步的推导：
 
-###2、免密登录
+Q:为什么会有多个对象呢？
+A:因为在类的外部可以随意new一个对象。或者，clone一个对象。
 
-1、用户将自己的公钥放在服务器上。
+Q:如何保证只有一个对象呢？
+A:不允许在类的外部new、clone对象。
 
-2、服务器向客户机发送一段随机字符串。
+Q:如何不允许在类的外部new、clone对象呢？
+**A:将这个类的构造方法设置成private,就可以防止在外部new一个对象。**
+在类的内部实现__clone()这个方法。
 
-3、客户机利用自己的私钥对随机字符串进行加密，发送给服务器。
+###如何才能生成这个唯一的对象呢？
+在类的内部，提供一个public方法。
+外部通过调用这个public方法，来获取类的实例对象。
 
-4、服务器利用事先存储的公钥解密，解密出来正确，允许登陆，否则，拒绝登陆。
-
-##NO.24 如何对多维数组进行排序
-###问题
-现有一个数组，如下：
-```
-$a=[
-	['key1'=>940,'key2'=>'blah'],
-	['key1'=>23,'key2'=>'this'],
-	['key1'=>894,'key2'=>'that']
-];
-```
-我想按照元素中key1的键值进行升序排序,得到：
-```
-$a=[
-	['key1'=>23,'key2'=>'this'],
-	['key1'=>894,'key2'=>'that'],
-	['key1'=>940,'key2'=>'blah']
-];
-```
-###解决：使用usort()自定义排序。
-```
+##代码演示
+```php
 <?php
-$a=[
-	['key1'=>940,'key2'=>'blah'],
-	['key1'=>23,'key2'=>'this'],
-	['key1'=>894,'key2'=>'that']
-];
-
-function asc_number_sort($x,$y){
-	if($x['key1']>$y['key1']){
-		return true;
-	}elseif ($x['key1']<$y['key1']) {
-		return false;
-	}else{
-		return 0;
-	}
+/**
+ * 单例类
+ */
+class Singleton {
+ 
+    /**
+     * 静态成品变量 保存全局实例
+     */
+    private static  $_instance = NULL;
+ 
+    /**
+     * 私有化默认构造方法，保证外界无法直接实例化
+     */
+    private function __construct() {
+    }
+ 
+    /**
+     * 静态工厂方法，返还此类的唯一实例
+     */
+    public static function getInstance() {
+        if (is_null(self::$_instance)) {
+            self::$_instance = new self();
+        }
+ 
+        return self::$_instance;
+    }
+ 
+    /**
+     * 防止用户克隆实例
+     */
+    public function __clone(){
+        die('Clone is not allowed.' . E_USER_ERROR);
+    }
+ 
+    /**
+     * 测试用方法
+     */
+    public function test() {
+        echo 'Singleton Test!';
+    }
+ 
 }
+ 
+/**
+ * 客户端
+ */
+class Client {
+ 
+     /**
+     * Main program.
+     */
+    public static function main() {
+        $instance = Singleton::getInstance();
+        $instance->test();
+    }
+}
+ 
+Client::main();
+?>
+```
 
-usort($a,'asc_number_sort');
-print_r($a);
-```
-###usort()等的说明
-PHP 会把内层数组中的元素不断地发送给这个函数，从而将其排序。它必须接收两个参数，并且返回一个值表示哪个参数应该排在前面。
 
-负数或者false意味着第一个参数应该排在第二个参数前面。
-正数或者 true 则表示第二个参数应该排在前面。
-如果值为 0则表示两个参数值相等。
-```
-uasort()会保留数组元素的key
-uksort()会基于key进行排序
-```
-##NO.25 isset()、empty()、is_null的区别
-###isset()
-检查一个变量是否已声明，且值不为null。
-换句话说：只能在变量值不是null的时候才返回true。
-没有声明变量，或变量值为null，都会返回false。
-###empty()
-empty()用来检测一个变量是否为空。
-也就是一个变量是false、空字符串、空数组、''，NULL、以及被unset()后，才返回false。
-###is_null
-is_null是isset()的反函数。
+
