--- a/Q26-30.md
+++ b/Q26-30.md
@@ -4,243 +4,332 @@
 
 ---
 
-##NO.26 如何获取PHP的致命错误？
+##NO.26观察者模式
+###针对具体实现编程，会导致我们以后在增加或删除布告板时必须修改程序。
+
+###观察者模式定义
+在对象之间定义一对多的依赖，这样一来，当一个对象改变状态，依赖他的对象都会收到通知，并自动更新。
+###为什么使用观察者模式
+针对具体场景的编程，耦合性比较高。
+使用观察者模式，观察者，与被观察者之间，不用关心彼此之间内部如何实现，双方只需要定义好消息通知的接口就可以了。这样实现了低耦合。
+
+###简单代码实现
+```php
+<?php
+ 
+/**
+ * @package design pattern
+ */
+ 
+/**
+ * 抽象主题角色
+ */
+interface Subject {
+ 
+    /**
+     * 增加一个新的观察者对象
+     * @param Observer $observer
+     */
+    public function attach(Observer $observer);
+ 
+    /**
+     * 删除一个已注册过的观察者对象
+     * @param Observer $observer
+     */
+    public function detach(Observer $observer);
+ 
+    /**
+     * 通知所有注册过的观察者对象
+     */
+    public function notifyObservers();
+}
+ 
+/**
+ * 具体主题角色
+ */
+class ConcreteSubject implements Subject {
+ 
+    private $_observers;
+ 
+    public function __construct() {
+        $this->_observers = array();
+    }
+ 
+    /**
+     * 增加一个新的观察者对象
+     * @param Observer $observer
+     */
+    public function attach(Observer $observer) {
+        return array_push($this->_observers, $observer);
+    }
+ 
+    /**
+     * 删除一个已注册过的观察者对象
+     * @param Observer $observer
+     */
+    public function detach(Observer $observer) {
+        $index = array_search($observer, $this->_observers);
+        if ($index === FALSE || ! array_key_exists($index, $this->_observers)) {
+            return FALSE;
+        }
+ 
+        unset($this->_observers[$index]);
+        return TRUE;
+    }
+ 
+    /**
+     * 通知所有注册过的观察者对象
+     */
+    public function notifyObservers() {
+        if (!is_array($this->_observers)) {
+            return FALSE;
+        }
+ 
+        foreach ($this->_observers as $observer) {
+            $observer->update();
+        }
+ 
+        return TRUE;
+    }
+ 
+}
+ 
+/**
+ * 抽象观察者角色
+ */
+interface Observer {
+ 
+    /**
+     * 更新方法
+     */
+    public function update();
+}
+ 
+class ConcreteObserver implements Observer {
+ 
+    /**
+     * 观察者的名称
+     * @var <type>
+     */
+    private $_name;
+ 
+    public function __construct($name) {
+        $this->_name = $name;
+    }
+ 
+    /**
+     * 更新方法
+     */
+    public function update() {
+        echo 'Observer', $this->_name, ' has notified.<br />';
+    }
+ 
+}
+ 
+/**
+ * 客户端
+ */
+class Client {
+ 
+    /**
+     * Main program.
+     */
+    public static function main() {
+        $subject = new ConcreteSubject();
+ 
+        /* 添加第一个观察者 */
+        $observer1 = new ConcreteObserver('Martin');
+        $subject->attach($observer1);
+ 
+        echo '<br /> The First notify:<br />';
+        $subject->notifyObservers();
+ 
+        /* 添加第二个观察者 */
+        $observer2 = new ConcreteObserver('phppan');
+        $subject->attach($observer2);
+ 
+        echo '<br /> The Second notify:<br />';
+        $subject->notifyObservers();
+ 
+        /* 删除第一个观察者 */
+        $subject->detach($observer1);
+ 
+        echo '<br /> The Third notify:<br />';
+        $subject->notifyObservers();
+    }
+ 
+}
+ 
+Client::main();
+?>
+```
+
+
+
+>大罗分享：观察者模式很常用啊，比如说我现在需要你发生某个case的时候需要通知我。首先我们要约定一个interface,这个接口由我来实现，而你不用关心这个接口的实现。我把这个interface告诉你，你在发生这个case的时候执行这个interface的fuction就好了。我就是观察者，你就是被观察者。 安卓底层实现了很多这种观察者模式，例如对contentProvider(数据提供者)的观察，他会给出一个interface.并给出registerObeser方法，参数必须是这个interface类型的。三方app开发人员，只需要实现这个interface.然后registe就好了。这里涉及面相接口编程的思想。
+
+  [1]: https://segmentfault.com/q/1010000006155587?sort=created
+
+##NO.27 如何将文件分块传递？
+###server端(发送端)
+```php
+<?php
+$fn = 'http://img06.tooopen.com/images/20160916/tooopen_sy_178957232691.jpg';//随便找的一个图片
+$size = 512;
+ 
+$mch = curl_multi_init ();
+$conn = array ();
+$url = 'http://localhost/curl_server.php';
+ 
+$fp = fopen($fn, 'rb');
+$i = 0;
+while(! feof($fp)) {
+  $post = array(
+    'id' => $i,
+    'name' => basename($fn),
+    'offset' => ftell($fp),
+    'data' => base64_encode(fread($fp, $size)),
+  );
+  $conn[$i] = curl_init ( $url );
+  curl_setopt( $conn[$i], CURLOPT_POST, true );
+  curl_setopt( $conn[$i], CURLOPT_POSTFIELDS, $post );
+  curl_setopt ( $conn[$i], CURLOPT_RETURNTRANSFER, true );
+  curl_multi_add_handle ( $mch, $conn[$i] );
+  $i++;
+}
+ 
+$running = NULL;
+do {
+    curl_multi_exec ( $mch, $running );
+} while ( $running > 0 );
+ 
+foreach ( $conn as $i => $v ) {
+  print_r(curl_multi_getcontent($v));
+  curl_close ( $conn[$i] );
+}
+ 
+curl_multi_close ( $mch );
+```
+###client端(接收端)
+```php
+<?php
+print_r($_POST);//应答
+$type = file_exists($_POST['name']) ? 'rb+' : 'wb';
+$fp = fopen($_POST['name'], $type);
+fseek($fp, $_POST['offset']);
+fwrite($fp, base64_decode($_POST['data']));
+fclose($fp);
+```
+##NO.28变态跳台阶问题
 ###问题描述
-获取PHP的fatal error,比如记录到Log里面，利于我们分析线上问题，可以做线上服务的监控。
-###两个函数
-####register_shutdown_function()
+一只青蛙一次可以跳上1级台阶，也可以跳上2级……它也可以跳上n级。求该青蛙跳上一个n级的台阶总共有多少种跳法？
+###分析推导
+```php
+关于本题，前提是n个台阶会有一次n阶的跳法。分析如下:
+f(1) = 1
+f(2) = f(2-1) + f(2-2)         //f(2-2) 表示2阶一次跳2阶的次数。
+f(3) = f(3-1) + f(3-2) + f(3-3) 
+...
+f(n) = f(n-1) + f(n-2) + f(n-3) + ... + f(n-(n-1)) + f(n-n) 
+ 
+说明： 
+1）这里的f(n) 代表的是n个台阶有一次1,2,...n阶的 跳法数。
+2）n = 1时，只有1种跳法，f(1) = 1
+3) n = 2时，会有两个跳得方式，一次1阶或者2阶，这回归到了问题（1） ，f(2) = f(2-1) + f(2-2) 
+4) n = 3时，会有三种跳得方式，1阶、2阶、3阶，
+    那么就是第一次跳出1阶后面剩下：f(3-1);第一次跳出2阶，剩下f(3-2)；第一次3阶，那么剩下f(3-3)
+    因此结论是f(3) = f(3-1)+f(3-2)+f(3-3)
+5) n = n时，会有n中跳的方式，1阶、2阶...n阶，得出结论：
+    f(n) = f(n-1)+f(n-2)+...+f(n-(n-1)) + f(n-n) => f(0) + f(1) + f(2) + f(3) + ... + f(n-1)
+    
+6) 由以上已经是一种结论，但是为了简单，我们可以继续简化：
+    f(n-1) = f(0) + f(1)+f(2)+f(3) + ... + f((n-1)-1) = f(0) + f(1) + f(2) + f(3) + ... + f(n-2)
+    
+    f(n) = f(0) + f(1) + f(2) + f(3) + ... + f(n-2) + f(n-1) = f(n-1) + f(n-1)
+    
+    可以得出：
+    f(n) = 2*f(n-1)
+    
+7) 得出最终结论,在n阶台阶，一次有1、2、...n阶的跳的方式时，总得跳法为：
+              | 1       ,(n=0 ) 
+f(n) =        | 1       ,(n=1 )
+              | 2*f(n-1),(n>=2)
 ```
-register_shutdown_function($callback)
-```
-register_shutdown_function()，就把你要注册进去的function放进【假装是队列吧】，等到脚本正常退出或显示调用exit时，再把注册进去的function拉出来执行.
-
-**register_shutdown_function()调用的3种情况：**
-
-- 脚本正常退出时；
-- 在脚本运行(run-time not parse-time)出错退出时；
-- 用户调用exit方法退出时。
-
-####error_get_last()
-error_get_last() 函数获取最后发生的错误。
-
-该函数以数组的形式返回最后发生的错误。
-
-返回的数组包含 4 个键和值：
-
-[type] - 错误类型
-[message] - 错误消息
-[file] - 发生错误所在的文件
-[line] - 发生错误所在的行
-###使用方法
-```
+###代码实现
+```php
 <?php
-register_shutdown_function( "fatal_handler" );
-
-function fatal_handler() {
-  $errfile = "unknown file";
-  $errstr  = "shutdown";
-  $errno   = E_CORE_ERROR;
-  $errline = 0;
-
-  $error = error_get_last();
-
-  if( $error !== NULL) {
-    $errno   = $error["type"];
-    $errfile = $error["file"];
-    $errline = $error["line"];
-    $errstr  = $error["message"];
-    Log::error("错误信息***");
-  }
+function jumpFloor($target) {
+    if ($target <= 0) {
+        return -1;
+    } else if ($target == 1) {
+        return 1;
+    } else {
+        return 2 * jumpFloor($target - 1);
+    }
 }
 ```
-###强烈注意
+##NO.29 psr-4中autoloader的原理是什么？
 
- >在parse-time出错的时候，是不会调用register_shutdown_function()函数的。只有在run-time出错的时候，才会调用register_shutdown_function()。
+###问题描述
+####为什么使用类的自动加载？
 
-下面我们举例说明：
+随着项目的变大，一个文件中使用的类越来越多，可能需要加载几十个类文件。如何对这些引入的类进行管理呢？
+最开始使用 __autoload()。但是如果一个项目依赖多个框架，多个框架都有__autoload()，就会报函数重复定义的错误
+###问题解决
+如何解决呢？
+使用spl_autoload_register()去注册一个自动加载函数。
+http://blog.csdn.net/panpan639944806/article/details/23192267
 
-####NO.1
-#####error_handler.php
-```
+ PSR-4规范能够满足面向package的自动加载，它规范了如何从文件路径自动加载类，同时规范了自动加载文件的位置。
+
+ 具体：https://my.oschina.net/1pei/blog/485099
+##NO.30 适配器模式
+###为什么使用适配器模式
+可以将截然不同的函数接口封装成统一的API。
+###适配器模式的应用场景
+1、系统想要使用现有的类，而现有的类不符合系统接口规则，要对这个接口进行适配；
+2、两个类做的事情相同或相似，形成对外的统一接口，方便以后其他类的引入，适配。
+####连接数据库的适配器。
+连接数据库可以使用PDO、Mysql、Mysqli等，每种连接方式都不同。
+如何对外形成一个统一的调用接口呢？
+####Cache的适配器。
+连接Cache，可以有Redis、Memcached等，每种连接方式也不同。
+如何对外形成一个统一的调用接口呢？
+###适配器模式的设计思路
+
+ - 定义适配接口
+```php
 <?php
-register_shutdown_function("error_handler");
-function error_handler(){
-    echo "Yeah,it's worked!";
-}
-function test(){}
-function test(){}
-```
-执行结果如下：
-```
-Fatal error: Cannot redeclare test() (previously declared in /Users/shuchao/Desktop/error_handler.php:6) in /Users/shuchao/Desktop/error_handler.php on line 7
-```
-#####原因分析
-在执行error_handler.php的时候，由于重复定义了两个函数test(),在php的parse-time就出错了（不是run-time），所以不能回调register_shutdown_function()中的函数。
-
-####NO.2
-#####error_handler.php
-```
-<?php
-register_shutdown_function("error_handler");
-function error_handler(){
-    echo "Yeah,it's worked!";
-}
-if(true){
-   function test(){}
-}
-function test(){}
-```
-执行结果如下：
-```
-Fatal error: Cannot redeclare test() (previously declared in /Users/shuchao/Desktop/error_handler.php:9) in /Users/shuchao/Desktop/error_handler.php on line 7
-Yeah,it's worked!%
-```
-#####原因分析
-我们看到，上面回调了register_shutdown_function().
-因为我们加了一个if()判断，if()里面的test()方法，相当于一个闭包，与外面的test()名称不冲突。
-也就是，上面的代码在parse-time没有出错，而是在run-time的时候出错了，所以我们能够获取到fatal error。
-
-####NO.3 
-#####error_handler.php
-```
-<?php
-register_shutdown_function("error_handler");
-function error_handler(){
-    echo "Yeah,it's worked!";
+interface Database{
+    public function connect();
+    public function query();
+    public function close();
 }
 ```
-#####test_error.php
-```
-<?php
-include './error_handler.php';
-function test(){}
-function test(){}
-```
-执行 test_error.php的结果如下
-```
-Fatal error: Cannot redeclare test() (previously declared in /Users/shuchao/Desktop/test_error.php:3) in /Users/shuchao/Desktop/test_error.php on line 4
-```
-#####原因分析
-当我们在运行test_error.php的时候,因为redeclare了两个test()方法，所以php的语法解析器在parse-time的时候就出错了。 所以不能回调register_shutdown_function()中的方法，不能catch住这个fatal error。
-
-####NO.4 
-#####error_handler.php
-```
-<?php
-register_shutdown_function("error_handler");
-function error_handler(){
-    echo "Yeah,it's worked!";
+ - 每个类实现这个接口
+ 
+Mysql连接的实现方法
+```php
+class Mysql implements Database{
+    //实现方法
 }
 ```
-#####test_error.php
-```
-<?php
-function test(){}
-function test(){}
-```
-#####include_all.php
-```
-require './error_handler.php';
-require './test_error.php';
-```
-执行 include_all.php的结果如下
-```
-Fatal error: Cannot redeclare test() (previously declared in /Users/shuchao/Desktop/include_all.php:2) in /Users/shuchao/Desktop/include_all.php on line 3
-Yeah,it's worked!%
-```
-#####结果分析
-上面我们捕获了fatal_error.
-因为在运行include_all.php的时候，include_all.php本身语法并没有出错，也就是在parse-time的时候并没有出错，而是include的文件出错了，也就是在run-time的时候出错了，这个时候是能回调register_shutdown_function()中的函数的。
-
-#####强烈建议：如果我们要使用register_shutdown_function进行错误捕捉，使用NO.4，最后一种方法，可以确保错误都能捕捉到。
-
-##NO.27 PHP中output buffering的原理，以及相关的应用
-###php缓存过程
-在请求一个PHP的过程中，实际上经过三个缓存:
-1. 程序缓存
-2. ob缓存 
-3. 浏览器缓存.
-###开启ob的两个方法
-```
-1.在php.ini 配置 ;output_buffering = 4096 这里去掉;号即可
-2 在php页面中使用 ob_start();
-```
-通过php.ini 打开的，则作用于所有的php页面 。使用ob_start()打开则只作用于该页面
-###ob缓存的知识点
-- 在服务中，如果我们开启了ob缓存，则echo数据首先放入到ob中
-- 当PHP页面**执行到最后**，则会把ob缓存的数据(如果有的话)， 强制刷新到程序缓存，然后通过apache对数据封装成http响应包，返 回给浏览器
-- 如果没有ob,所有的数据直接放入程序缓存。 header信息不管你是否开启ob,总是放入到程序缓存。
-###ob相关的函数
-####ob_start($callback)
-```
-//在当前页面中开启ob,注意callback
-ob_start($callback);
-```
-####ob_get_contents()
-```
-//获取当前ob缓存中的内容
-ob_get_contents()
-```
-####ob_get_clean()
-```
-//获取当前ob缓存中的内容，并且清空当前的ob缓存
-ob_get_clean()
-```
-####ob_flush()
-```
-//将ob缓存中的内容，刷到程序缓存中,但并没有关闭ob缓存
-ob_flush()
-```
-####ob_end_flush()
-```
-//关闭ob缓存，并将数据刷回到程序缓存中
-ob_end_flush()
-```
-####ob_clean()
-```
-//将ob缓存中的内容清空
-ob_clean()
-```
-####ob_end_clean()
-```
-//将ob缓存中的数据清空，并且关闭ob缓存
-ob_end_clean()
-```
-###注意ob_start($callback)的回调
-```
-<?php
-ob_start("callback_func");
-function callback_func($str){
-	return "callback".$str;
+Mysqli连接的实现方法
+```php
+class Mysqli implements Database{
+   //实现方法
 }
-echo "123";//输出：callback123
 ```
-###应用场景
-####在header()发送之前的报错
-#####出错代码
+PDO连接的实现方法
+```php
+class PDO implements Database{
+   //实现方法
+}
 ```
+ - 应用中的实现
+```php
 <?php
-echo "before_header";
-header("Content-type:text/html;charset=utf-8");
-echo "after_header";
+$conn=new Mysql();//使用Mysql连接
+$conn=new Mysqli();//使用Mysqli连接
+$conn=new PDO();//使用PDO连接
 ```
-输出：
-```
-Warning: Cannot modify header information - headers already sent by (output started at /Users/shuchao/Desktop/test.php:2) in /Users/shuchao/Desktop/test.php on line 3
-```
-#####解决办法
-在发送header前开启ob,则所有的echo内容都会到ob里面，从而解决错误。
-```
-<?php
-ob_start();
-echo "before_header\n";
-header("Content-type:text/html;charset=utf-8");
-echo "after_header\n";
-```
-输出
-```
-before_header
-after_header
-```
-
-
